--- a/appcoder/templates/appcoder/profesores.html
+++ b/appcoder/templates/appcoder/profesores.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Profesores</h1>
-  </body>
-</html>
+{%extends "appcoder/base.html"%} {% block titulo %} Coder | Profesores
+{%endblock %} {% block contenidoCambiante %} {% endblock %}
