--- a/appcoder/templates/appcoder/create_curso.html
+++ b/appcoder/templates/appcoder/create_curso.html
@@ -1,9 +1,9 @@
-{% extends "appcoder/base.html" %} {% load static%} {%block titulo%}Formulario
+{% extends "appcoder/base.html" %} {% load static%} {%block titulo%}Crear curso
 {% endblock titulo %} {%block contenidoCambiante%}
 <form action="" method="POST">
   {% csrf_token %}
   <table>
-    {{mi_formulario.as_table}}
+    {{form.as_table}}
   </table>
   <input type="submit" value="Enviar" />
 </form>
