--- a/appcoder/templates/appcoder/base.html
+++ b/appcoder/templates/appcoder/base.html
@@ -37,8 +37,25 @@
         <a class="navbar-brand" href={% url "estudiantes" %}>Alumnos</a>
         <a class="navbar-brand" href={% url "profesores" %}>Profesores</a>
         <a class="navbar-brand" href={% url "entregables" %}>Entregables</a>
-        <a class="btn btn-primary" href="#signup">Sign Up</a>
+        <img src="{{request.user.avatar.imagen.url}}" alt="" height="40px">
+        {% if request.user.is_authenticated %}
+              <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"aria-expanded="false">
+                    {{request.user.username}}
+                   </button>
+                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      {%if request.user.is_authenticated%}
+                            <li><a class="dropdown-item" href="{% url 'Logout'%}">Cerrar sesion</a></li>
+                            <li><a class="dropdown-item" href="{% url 'EditarPerfil'%}">Editar perfil</a></li>
+                      {%else%}
+                            <li><a class="dropdown-item" href="{% url 'Login'%}">Login</a></li>
+                            <li><a class="dropdown-item" href="{% url 'Register'%}">Crear cuenta</a></li>
+                      {%endif%}
+                    </ul>
+               </div>
+        {%endif%}
       </div>
+      
     </nav>
     <!-- Masthead-->
     <header class="masthead">
