--- a/appcoder/templates/appcoder/busquedaCurso.html
+++ b/appcoder/templates/appcoder/busquedaCurso.html
@@ -4,4 +4,6 @@
   <input type="number" name="comision" id="comision" />
   <input type="submit" value="Buscar" />
 </form>
-{%endblock contenidoCambiante%}
+{% for curso in cursos %}
+<p>{{curso.nombre}}</p>
+{% endfor %} {%endblock contenidoCambiante%}
